--- a/wherever/index.html
+++ b/wherever/index.html
@@ -148,6 +148,7 @@
             "淡い恋心.mp3",
             "シンコペーション.mp3",
             "cappuccino.mp3",
+            "ジュピターB.mp3",
         ];
         const musicSelect = document.getElementById('musicSelect');
         const onSound = document.getElementById('onSound');
