--- a/wherever/index.html
+++ b/wherever/index.html
@@ -154,6 +154,7 @@
             "Vamos Ardija.mp3",
             "『四季』春.mp3",
             "『四季』秋.mp3",
+            "フラワーショップ.mp3",
         ];
         const musicSelect = document.getElementById('musicSelect');
         const onSound = document.getElementById('onSound');
