--- a/wherever/index.html
+++ b/wherever/index.html
@@ -155,6 +155,7 @@
             "『四季』春.mp3",
             "『四季』秋.mp3",
             "フラワーショップ.mp3",
+            "おはよう.mp3",
         ];
         const musicSelect = document.getElementById('musicSelect');
         const onSound = document.getElementById('onSound');
