--- a/emergency-earthquake/index.html
+++ b/emergency-earthquake/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-    <title>震度分布図</title>
+    <title>震度分布図β</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
